<resources>
    <string name="app_name">My Application</string>
    <string name="go_to_google">Go to Google</string>
    <string name="send_to_infoactivity">Send to infoactivity</string>
    <string name="enter_value">Enter value</string>
    <string name="send_text">Send text</string>
    <string name="image_BN">TODO</string>
    <string name="back">Назад</string>
    <string name="infAboutOwl">Информация о совах</string>
    <string name="BN">Бородатая неясыть</string>
    <string name="hint_optionOfName">Введите возможное имя совы</string>
    <string name="text1">Здесь будет имя совы</string>
    <string name="inf">Информация</string>
    <string name="aboutOwl">Это сова по имени Тучка! Борода́тая нея́сыть — вид хищных птиц из рода неясытей и семейства совиных. Крупная (размах крыльев до полутора метров) птица. Русское название получила за чёрное пятно под клювом, похожее на бороду.</string>
    <string name="information_about_owl">Information about Owl</string>
    <string name="todo">TODO</string>
</resources>