<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infAboutOwl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="340dp"
        android:layout_marginTop="76dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/BN"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_optionOfName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:hint="@string/text1"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="272dp"
            android:text="@string/inf"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>