<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/relativeLayout"
    android:layout_width="412dp"
    android:layout_height="727dp"
    android:layout_marginTop="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="VisualLintBounds"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/widthOwl"
            android:layout_height="@dimen/heightOwl"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="60dp"
            android:contentDescription="@string/image_BN"
            app:srcCompat="@drawable/cgfctctc"
            tools:srcCompat="@drawable/cgfctctc" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="47dp"
            android:layout_marginEnd="47dp"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="8sp"
            android:text="@string/aboutOwl"
            android:textAlignment="viewStart"
            android:textColor="#424242"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:text="@string/back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:textSize="16sp" />
</RelativeLayout>

